Fixing problems using finbug and test the spring implementation.